media records bg was too small, fixed

--- a/media/sass/main.scss
+++ b/media/sass/main.scss
@@ -250,7 +250,7 @@ section{
 .bg-shuttercal		{background: orange url(../images/shuttercal-bg2.jpg) no-repeat center / 100%;}
 .bg-moey			{background: skyblue url(../images/moey-bg.jpg) no-repeat center / 100%;}
 .bg-amnh			{background: navy url(../images/amnh-bg.jpg) no-repeat center / 100%;}
-.bg-mediarecords	{background: #333 url(../images/mediarecords-bg.png) no-repeat center / 180%;}
+.bg-mediarecords	{background: #333 url(../images/mediarecords-bg.png) no-repeat center / 205%;}
 .bg-nick			{background: orange url(../images/nick-bg.jpg) no-repeat center / 100%;}
 
 /*--------------------
